# DGPClass

./: README.md
dgp2019_exercise3/: CMakeLists.txt
dgp2019_exercise3/cmake/: ConfigureCompiler.cmake
dgp2019_exercise3/iso_contouring/: CMakeLists.txt  implicit_functions.cpp  isotest.cpp  viewer.cpp  viewer.h
dgp2019_exercise4/: CMakeLists.txt
dgp2019_exercise4/cmake/: FindGLFW3.cmake
dgp2019_exercise4/curve_smoothing/: CMakeLists.txt  curves.cpp  test.cpp
dgp2019_exercise5/curvature/: viewer.cpp
